--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -5,11 +5,11 @@
 | version | the jsbridge-sdk version | `string` | `unknown` |  |
 | code | get the code which be used to get access-token | `string` | `undefined` |  |
 | codeVerifier | get the code-verifier which be used to get access-token | `string` | `undefined` |  |
+| token | get mixin access-token | `string` | `undefined` |  |
 | conversationId | the conversation id | `string` | `undefined` |  |
 | isMixin | judgement whether or not in mixin or reborn app | `boolean` | - |  |
 | login | go login | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | do logout | `function(reload = true)` | - |  |
-| token | get mixin access-token | `string` | `undefined` |  |
 | requestToken | request access-token by code  | `function(params?: ReqTokenParams, persistence = true)` | - |  |
 | getUserInfo | get user infomations | `function(token?: string)` | - |  |
 | getContext | get mixin app context | `function()` | - |  |
@@ -37,11 +37,19 @@ the code which used to get access-token
   ```
 
 ### codeVerifier
-the code-verifier which used to get access-token
+the code-verifier which used to get `access-token`
 
 - example
   ```typescript
   console.info(bridge.codeVerifier); // OWVicDNpenVKVzRlNmFBUUhUOUlHakJzODhQeVZHNFE
+  ```
+
+### token
+To get an `access-token`, obviously, you should have to call `requestToken` first
+
+- example
+  ```typescript
+  console.info(bridge.token); // eyJhbGciOiJSUzUxMiIsInR5cCI6IkpXVCJ9.eyJhaWQiOiJiYTgwZDE3……
   ```
 
 ### conversationId
@@ -101,20 +109,16 @@ Jump to the OAuth page, ask the user authorization confirm, and then redirect ba
 ### logout
 logout
 
-- example
+- types
   ```typescript
-  const isReload = false;
-  bridge.logout(isReload);
+  type Reload = boolean;
+  bridge.logout(reload: Reload);
   ```
-
-### token
-To get an `access-token`, obvious, you should have to call `requestToken` first
 
 - example
   ```typescript
-  const token = bridge.token;
+  bridge.logout(false);
   ```
-
 
 ### requestToken
 Use the `code` which returned by login authorized to exchange for `access-token`
@@ -142,6 +146,8 @@ Use the `code` which returned by login authorized to exchange for `access-token`
 ### getUserInfo
 Get user information, please make sure the `access_token` is valid
 
+- types
+
 - example
   ```typescript
   const userInfo = await bridge.getUserInfo();
@@ -150,6 +156,8 @@ Get user information, please make sure the `access_token` is valid
 ### getContext
 Get mixin app context contents
 
+- types
+
 - example
   ```typescript
   const ctx = bridge.getContext();
@@ -157,6 +165,8 @@ Get mixin app context contents
 
 ### reloadTheme
 Reload the theme according to the `<meta>` tag' which specify the `theme-color`
+
+- types
 
 - example
   ```html
@@ -177,6 +187,12 @@ Reload the theme according to the `<meta>` tag' which specify the `theme-color`
 ### playlist
 Play audio(s) by mixin native player
 
+- types
+  ```typescript
+  type List = string[];
+  bridge.playlist(list: List);
+  ```
+
 - example
   ```typescript
   bridge.playlist([
@@ -187,7 +203,7 @@ Play audio(s) by mixin native player
   ```
 
 ### payment
-evoke payment checkout by generate pay scheme-url
+evoke payment checkout by generate pay *scheme-url*
 
 - types
   ```typescript
@@ -212,7 +228,13 @@ evoke payment checkout by generate pay scheme-url
   ```
 
 ### transfer
-evoke transfer checkout by generate pay scheme-url
+evoke transfer checkout by generate pay *scheme-url*
+
+- types
+  ```typescript
+  type Recipient = string;
+  bridge.transfer(recipient: Recipient);
+  ```
 
 - example
   ```typescript
@@ -220,7 +242,7 @@ evoke transfer checkout by generate pay scheme-url
   ```
 
 ### share
-evoke share action by generate share scheme-url
+evoke share action by generate share *scheme-url*
 
 - types
   ```typescript
@@ -261,7 +283,7 @@ evoke share action by generate share scheme-url
   ```
 
 ### popup
-evoke user or bot's popup by generate scheme-url
+evoke user or bot's popup by generate *scheme-url*
 
 - types
   ```typescript
