--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -6,10 +6,10 @@
 | conversationId | conversation id | `string` | `undefined` |  |
 | code | code 通常用于获取 access-token | `string` | `undefined` |  |
 | codeVerifier | code-verifier 通常用于获取 access-token | `string` | `undefined` |  |
+| token | 获取 access-token | `string` | `undefined` |  |
 | isMixin | 判断是否在 mixin 或者 reborn App 内 | `boolean` | - |  |
 | login | 跳转到 OAuth认证页 去登陆 | `function(auth: AUTH, params?: LoginParams)` | - |  |
 | logout | 登出 | `function(reload = true)` | - |  |
-| token | 获取access-token | `string` | `undefined` |  |
 | requestToken | 用code换取token | `function(params?: ReqTokenParams, persistence = true)` | - |  |
 | getUserInfo | 获取用户信息 | `function(token?: string)` | - |  |
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
@@ -37,11 +37,19 @@ code 通常用于获取 access-token
   ```
 
 ### codeVerifier
-code-verifier 通常用于获取 access-token
+code-verifier 通常用于获取 `access-token`
 
 - 使用示例
   ```typescript
   console.info(bridge.codeVerifier); // OWVicDNpenVKVzRlNmFBUUhUOUlHakJzODhQeVZHNFE
+  ```
+
+### token
+获取 `access-token`，当然一开始得先调用 `requestToken` 来换取 token
+
+- 使用示例
+  ```typescript
+  console.info(bridge.token); // eyJhbGciOiJSUzUxMiIsInR5cCI6IkpXVCJ9.eyJhaWQiOiJiYTgwZDE3……
   ```
 
 ### conversationId
@@ -102,24 +110,20 @@ conversation id 实际上是通过 getContext 获取的
 ### logout
 登出
 
+- 参数类型
+  ```typescript
+  type Reload = boolean;
+  bridge.logout(reload: Reload);
+  ```
+
 - 使用示例
   ```typescript
   const isReload = false;
   bridge.logout(isReload);
   ```
 
-### token
-获取 `access-token`，当然一开始得先调用 `requestToken` 来换取 token
-
-- 使用示例
-  ```typescript
-  const token = bridge.token;
-  ```
-
-
 ### requestToken
 用授权登陆返回的 `code`，换取 `access-token`
-
 
 - 参数类型
   ```typescript
@@ -144,6 +148,8 @@ conversation id 实际上是通过 getContext 获取的
 ### getUserInfo
 获取用户信息，请确保 `access_token` 有效
 
+- 参数类型
+
 - 使用示例
   ```typescript
   const userInfo = await bridge.getUserInfo();
@@ -152,6 +158,8 @@ conversation id 实际上是通过 getContext 获取的
 ### getContext
 在 Mixin App 中，获取当前上下文内容
 
+- 参数类型
+
 - 使用示例
   ```typescript
   const ctx = bridge.getContext();
@@ -159,6 +167,8 @@ conversation id 实际上是通过 getContext 获取的
 
 ### reloadTheme
 根据定义的  `<meta>` 标签中的 `theme-color` 来重载 mixin app 的主体色
+
+- 参数类型
 
 - 使用示例
   ```html
@@ -180,6 +190,12 @@ conversation id 实际上是通过 getContext 获取的
 ### playlist
 用原生播放器播放音频
 
+- 参数类型
+  ```typescript
+  type List = string[];
+  bridge.playlist(list: List);
+  ```
+
 - 使用示例
   ```typescript
   bridge.playlist([
@@ -190,7 +206,7 @@ conversation id 实际上是通过 getContext 获取的
   ```
 
 ### payment
-通过生成 scheme-url 来唤起支付面板
+通过生成 *scheme-url* 来唤起支付面板
 
 - 参数类型
   ```typescript
@@ -215,7 +231,13 @@ conversation id 实际上是通过 getContext 获取的
   ```
 
 ### transfer
-通过生成 scheme-url 来唤起转账面板
+通过生成 *scheme-url* 来唤起转账面板
+
+- 参数类型
+  ```typescript
+  type Recipient = string;
+  bridge.transfer(recipient: Recipient);
+  ```
 
 - 使用示例
   ```typescript
@@ -223,7 +245,7 @@ conversation id 实际上是通过 getContext 获取的
   ```
 
 ### share
-通过生成 scheme-url 来唤起App内分享
+通过生成 *scheme-url* 来唤起App内分享
 
 - 参数类型
   ```typescript
@@ -264,13 +286,13 @@ conversation id 实际上是通过 getContext 获取的
   ```
 
 ### popup
-通过生成 scheme-url 来唤起用户/机器人的主页
+通过生成 *scheme-url* 来唤起用户/机器人的主页
 
 - 参数类型
   ```typescript
   type PARAMS_POPUP_BOT = {
     app_id: string; // 机器人的地址
-    action?: 'open'; // 总是会打开机器人弹窗，无论当前是否已经存
+    action?: 'open'; // 总是会打开机器人弹窗，无论当前是否已经存在弹窗
     [props: string]: any; // 在打开机器人主页时，可以传递的参数，以便于开发邀请代码等功能
   }
 
