support showToast and fix reloadTheme problem

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -14,6 +14,7 @@
 | getUserInfo | get user infomations | `function(token?: string)` | - |  |
 | getContext | get mixin app context | `function()` | - |  |
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
+| showToast | call native message window | `function(msg: string)` | - | `Android Only` |
 | playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
 | payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
 | transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string): string \| undefined` | - |  |
@@ -182,6 +183,22 @@ Reload the theme according to the `<meta>` tag' which specify the `theme-color`
   ```
   ```typescript
   bridge.reloadTheme();
+  ```
+
+### showToast
+call native message window
+
+*Android Only*
+
+- types
+  ```typescript
+  type Msg = string;
+  bridge.showToast(msg: Msg);
+  ```
+
+- example
+  ```typescript
+  bridge.showToast('your message here!');
   ```
 
 ### playlist
