--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -14,6 +14,7 @@
 | getUserInfo | 获取用户信息 | `function(token?: string)` | - |  |
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
 | reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
+| showToast | 调用原生的消息弹窗 | `function(msg: string)` | - | `Android Only` |
 | playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
 | payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
 | transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string): string \| undefined` | - |  |
@@ -185,6 +186,22 @@ conversation id 实际上是通过 getContext 获取的
 
   ```typescript
   bridge.reloadTheme();
+  ```
+
+### showToast
+调用原生的消息弹窗
+
+*Android Only*
+
+- 参数类型
+  ```typescript
+  type Msg = string;
+  bridge.showToast(msg: Msg);
+  ```
+
+- 使用示例
+  ```typescript
+  bridge.showToast('your message here!');
   ```
 
 ### playlist
