[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.4.0-0

--- a/packages/sdk/docs/1.md
+++ b/packages/sdk/docs/1.md
@@ -51,6 +51,8 @@ bridge.getContext();
       bridge.login({
         phone: true,
         assets: true
+      }, {
+        oauth_url: 'https://mixin-www.zeromesh.net/oauth/authorize' // The mixin official oauth url
       });
     }
   </script>
