--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -15,11 +15,15 @@
 | getContext | get mixin app context | `function()` | - |  |
 | reloadTheme | reload the theme according to theme-color | `function()` | - |  |
 | showToast | call native message window | `function(msg: string)` | - | `Android Only` |
-| playlist | play audio by mixin native player | `function(src: string[])` | - | `0.3.0` |
-| payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
+| playlist | play audio by mixin native player | `function(src: string[])` | - | `0.30.0` |
+| payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): { url?: string, params: PARAMS_PAYMENT } \| undefined` | - |  |
 | transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string): string \| undefined` | - |  |
+| snapshot | evoke transfer detail checkout by generate snapshot scheme-url | `function(params: PARAMS_SNAPSHOTS): string \| undefined` | - |  |
+| withdrawal | evoke withdrawal of an asset by generate withdrawal scheme-url | `function(params: PARAMS_WITHDRAWAL): { url?: string, params: PARAMS_WITHDRAWAL } \| undefined` | - |  |
+| address | evoke withdrawal-address action by generate address scheme-url | `function(category: 'add' \| 'del', params: PARAMS_ADDRESS_ADD \| PARAMS_ADDRESS_DELETE): string \| undefined` | - |  |
 | share | evoke share action by generate share scheme-url | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
 | popup | evoke user or bot's popup by generate scheme-url | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
+| conversation | evoke conversation by generate conversations scheme-url | `function(conversation_id: string): string \| undefined` | - | `0.31.1` |
 
 ### version
 the jsbridge-sdk version
@@ -258,6 +262,77 @@ evoke transfer checkout by generate pay *scheme-url*
   bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
 
+### snapshot
+evoke transfer detail checkout by generate snapshots *scheme-url*
+
+- types
+  ```typescript
+  type PARAMS_SNAPSHOTS = {
+    trace_id?: string;
+    snapshot_id?: string;
+  };
+  bridge.snapshot(params: PARAMS_SNAPSHOTS);
+  ```
+
+- example
+  ```typescript
+  bridge.snapshot({ trace_id: 'xxxxxx' });
+  ```
+
+### withdrawal
+evoke withdraw by generate withdrawal *scheme-url*
+
+- types
+  ```typescript
+  type PARAMS_WITHDRAWAL = {
+    address: string; // address id
+    asset: string; // asset id
+    amount: string;
+    trace?: string; // trace id
+    memo?: string | Record<string, string>;
+  };
+  bridge.withdrawal(params: PARAMS_WITHDRAWAL);
+  ```
+
+- example
+  ```typescript
+  bridge.withdrawal({
+    address: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR',
+    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    amount: '0.001'
+  });
+  ```
+
+### address
+evoke withdrawal-address action by generate address *scheme-url*
+
+- types
+  ```typescript
+  type PARAMS_ADDRESS_ADD = {
+    asset: string; // asset id
+    label: string; // address label
+    destination: string; // withdrawal address
+    tag?: string; // tag
+  };
+
+  type PARAMS_ADDRESS_DELETE = {
+    asset: string; // asset id
+    address: string; // address id
+  };
+
+  bridge.address(type: 'add', params: PARAMS_ADDRESS_ADD): string | undefined;
+  bridge.address(type: 'del', params: PARAMS_ADDRESS_DELETE): string | undefined;
+  ```
+
+- example
+  ```typescript
+  bridge.address('add', {
+    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    label: 'BigONE wallet',
+    destination: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR'
+  });
+  ```
+
 ### share
 evoke share action by generate share *scheme-url*
 
@@ -317,4 +392,18 @@ evoke user or bot's popup by generate *scheme-url*
 - example
   ```typescript
   bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
+  ```
+
+### conversation
+evoke conversation checkout by generate conversations *scheme-url*
+
+- types
+  ```typescript
+  type conversationId = string;
+  bridge.conversation(conversation_id: conversationId);
+  ```
+
+- example
+  ```typescript
+  bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e');
   ```
