--- a/packages/sdk/docs/1.zh-CN.md
+++ b/packages/sdk/docs/1.zh-CN.md
@@ -51,6 +51,8 @@ bridge.getContext();
       bridge.login({
         phone: true,
         assets: true
+      }, {
+        oauth_url: 'https://mixin-www.zeromesh.net/oauth/authorize' // mixin 官方 oauth 地址
       });
     }
   </script>
