--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -15,11 +15,15 @@
 | getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
 | reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
 | showToast | 调用原生的消息弹窗 | `function(msg: string)` | - | `Android Only` |
-| playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.3.0` |
-| payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): string \| undefined` | - |  |
+| playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.30.0` |
+| payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): { url?: string, params: PARAMS_PAYMENT } \| undefined` | - |  |
 | transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string): string \| undefined` | - |  |
+| snapshot | 通过生成 scheme-url 来唤起转账详情 | `function(params: PARAMS_SNAPSHOTS): string \| undefined` | - |  |
+| withdrawal | 通过生成 scheme-url 来唤起取回资产面板 | `function(params: PARAMS_WITHDRAWAL): { url?: string, params: PARAMS_WITHDRAWAL } \| undefined` | - |  |
+| address | 通过生成 scheme-url 来唤起取回资产地址的操作 | `function(category: 'add' \| 'del', params: PARAMS_ADDRESS_ADD \| PARAMS_ADDRESS_DELETE): string \| undefined` | - |  |
 | share | 通过生成 scheme-url 来唤起App内分享 | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
 | popup | 通过生成 scheme-url 来唤起用户/机器人的主页 | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
+| conversation | 通过生成 scheme-url 来唤起对话 | `function(conversation_id: string): string \| undefined` | - | `0.31.1` |
 
 ### version
 jsbridge-sdk 的版本号
@@ -261,6 +265,77 @@ conversation id 实际上是通过 getContext 获取的
   bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
   ```
 
+### snapshot
+通过生成 *scheme-url* 来唤起转账详情
+
+- 参数类型
+  ```typescript
+  type PARAMS_SNAPSHOTS = {
+    trace_id?: string;
+    snapshot_id?: string;
+  };
+  bridge.snapshot(params: PARAMS_SNAPSHOTS);
+  ```
+
+- 使用示例
+  ```typescript
+  bridge.snapshot({ trace_id: 'xxxxxx' });
+  ```
+
+### withdrawal
+通过生成 *scheme-url* 来唤起取回资产面板
+
+- 参数类型
+  ```typescript
+  type PARAMS_WITHDRAWAL = {
+    address: string; // address id 取回资产的地址
+    asset: string; // asset id
+    amount: string;
+    trace?: string; // trace id
+    memo?: string | Record<string, string>;
+  };
+  bridge.withdrawal(params: PARAMS_WITHDRAWAL);
+  ```
+
+- 使用示例
+  ```typescript
+  bridge.withdrawal({
+    address: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR',
+    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    amount: '0.001'
+  });
+  ```
+
+### address
+通过生成 *scheme-url* 来唤起取回资产地址的操作
+
+- 参数类型
+  ```typescript
+  type PARAMS_ADDRESS_ADD = {
+    asset: string; // asset id
+    label: string; // 取回资产地址的标签
+    destination: string; // address id 取回资产的地址
+    tag?: string; // 标记
+  };
+
+  type PARAMS_ADDRESS_DELETE = {
+    asset: string; // asset id
+    address: string; // address id 取回资产的地址
+  };
+
+  bridge.address(type: 'add', params: PARAMS_ADDRESS_ADD): string | undefined;
+  bridge.address(type: 'del', params: PARAMS_ADDRESS_DELETE): string | undefined;
+  ```
+
+- 使用示例
+  ```typescript
+  bridge.address('add', {
+    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
+    label: 'BigONE wallet',
+    destination: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR'
+  });
+  ```
+
 ### share
 通过生成 *scheme-url* 来唤起App内分享
 
@@ -320,4 +395,18 @@ conversation id 实际上是通过 getContext 获取的
 - 使用示例
   ```typescript
   bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
+  ```
+
+### conversation
+通过生成 *scheme-url* 来唤起对话
+
+- types
+  ```typescript
+  type conversationId = string;
+  bridge.conversation(conversation_id: conversationId);
+  ```
+
+- example
+  ```typescript
+  bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e');
   ```
