[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.4.0

--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -288,7 +288,7 @@ conversation id 实际上是通过 getContext 获取的
 - 参数类型
   ```typescript
   type PARAMS_WITHDRAWAL = {
-    address: string; // address id 取回资产的地址
+    address: string; // address id
     asset: string; // asset id
     amount: string;
     trace?: string; // trace id
@@ -314,13 +314,13 @@ conversation id 实际上是通过 getContext 获取的
   type PARAMS_ADDRESS_ADD = {
     asset: string; // asset id
     label: string; // 取回资产地址的标签
-    destination: string; // address id 取回资产的地址
+    destination: string; // 取回资产的地址
     tag?: string; // 标记
   };
 
   type PARAMS_ADDRESS_DELETE = {
     asset: string; // asset id
-    address: string; // address id 取回资产的地址
+    address: string; // address id
   };
 
   bridge.address(type: 'add', params: PARAMS_ADDRESS_ADD): string | undefined;
