[MIXIN-JSBRIDGE-BOT]: 0.1.9

--- a/packages/sdk/docs/2.md
+++ b/packages/sdk/docs/2.md
@@ -1,409 +1,43 @@
-# API
+# Options
 
-| name | desc | type | default | version |
-| --- | --- | --- | --- | --- |
-| version | the jsbridge-sdk version | `string` | `unknown` |  |
-| code | get the code which be used to get access-token | `string` | `undefined` |  |
-| codeVerifier | get the code-verifier which be used to get access-token | `string` | `undefined` |  |
-| token | get mixin access-token | `string` | `undefined` |  |
-| conversationId | the conversation id | `string` | `undefined` |  |
-| isMixin | judgement whether or not in mixin or reborn app | `boolean` | - |  |
-| login | go login | `function(auth: AUTH, params?: LoginParams)` | - |  |
-| logout | do logout | `function(reload = true)` | - |  |
-| requestToken | request access-token by code  | `function(params?: ReqTokenParams, persistence = true)` | - |  |
-| getUserInfo | get user infomations | `function(token?: string)` | - |  |
-| getContext | get mixin app context | `function()` | - |  |
-| reloadTheme | reload the theme according to theme-color | `function()` | - |  |
-| showToast | call native message window | `function(msg: string)` | - | `Android Only` |
-| playlist | play audio by mixin native player | `function(src: string[])` | - | `0.30.0` |
-| payment | evoke payment checkout by generate pay scheme-url | `function(params: PARAMS_PAYMENT): { url?: string, params: PARAMS_PAYMENT } \| undefined` | - |  |
-| transfer | evoke transfer checkout by generate pay scheme-url | `function(recipient: string): string \| undefined` | - |  |
-| snapshot | evoke transfer detail checkout by generate snapshot scheme-url | `function(params: PARAMS_SNAPSHOTS): string \| undefined` | - |  |
-| withdrawal | evoke withdrawal of an asset by generate withdrawal scheme-url | `function(params: PARAMS_WITHDRAWAL): { url?: string, params: PARAMS_WITHDRAWAL } \| undefined` | - |  |
-| address | evoke withdrawal-address action by generate address scheme-url | `function(category: 'add' \| 'del', params: PARAMS_ADDRESS_ADD \| PARAMS_ADDRESS_DELETE): string \| undefined` | - |  |
-| share | evoke share action by generate share scheme-url | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
-| popup | evoke user or bot's popup by generate scheme-url | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
-| conversation | evoke conversation by generate conversations scheme-url | `function(conversation_id: string): string \| undefined` | - | `0.31.1` |
+| Name | Desc | Type | Default |
+| --- | --- | --- | --- |
+| client_id | the mixin bot id | `string` |  |
+| debug | the debug mode | `boolean` | `true` |
+| logLevel | the log level | `'detail' \| 'info' \| 'warn' \| 'error' \| 'silent'` | `detail` |
 
-### version
-the jsbridge-sdk version
+### client_id
+the mixin bot id (APP ID)
 
 - example
   ```typescript
-  console.info(bridge.version); // 0.1.3
-  ```
-
-### code
-the code which used to get access-token
-
-- example
-  ```typescript
-  console.info(bridge.code); // 550a98ce9095e3ca65ff0e3d9871a4b3dfda338e65c04e8afc4aeb71254d67e5
-  ```
-
-### codeVerifier
-the code-verifier which used to get `access-token`
-
-- example
-  ```typescript
-  console.info(bridge.codeVerifier); // OWVicDNpenVKVzRlNmFBUUhUOUlHakJzODhQeVZHNFE
-  ```
-
-### token
-To get an `access-token`, obviously, you should have to call `requestToken` first
-
-- example
-  ```typescript
-  console.info(bridge.token); // eyJhbGciOiJSUzUxMiIsInR5cCI6IkpXVCJ9.eyJhaWQiOiJiYTgwZDE3……
-  ```
-
-### conversationId
-the conversation id that actually could access in context
-
-- example
-  ```typescript
-  console.info(bridge.conversationId); // 51e0e886-fba7-3732-804f-2686e5bb459e
-  ```
-
-### isMixin
-judgement whether or not in mixin or reborn app
-
-- example
-  ```typescript
-  console.info(bridge.isMixin); // true
-  ```
-
-### login
-Jump to the OAuth page, ask the user authorization confirm, and then redirect back to the page which specified `redirect_url`
-
-- types
-  ```typescript
-  type AUTH = {
-    phone?: boolean; // ask for user's phone number
-    profile?: boolean; // ask for user's phone profile
-    contacts?: boolean; // ask for user's contacts
-    assets?: boolean; // ask for user's assets
-    snapshots?: boolean; // ask for user's transfer records
-    messages?: boolean; // allow bot represent you to send message
-  };
-
-  type LoginParams = {
-    oauth_url?: string; // oauth address which contain protocol and host, default is `https://mixin-oauth.firesbox.com`
-    client_id?: string; // the client id which can be found at mixin developer platform
-    redirect_url?: string; // redirect url
-    state?: string; // oauth state
-    code_challenge?: boolean; // whether need code_challenge, default is true
-  };
-
-  bridge.login(auth: Auth, params?: LoginParams): void;
-  ```
-
-- example
-  ```typescript
-  const auth = {
-    phone: true,
-    profile: true,
-    contacts: false, 
-    assets: true, 
-    snapshots: false 
-  }
-
-  bridge.login(auth, { redirect_url: 'https://localhost:3000' });
-  ```
-
-### logout
-logout
-
-- types
-  ```typescript
-  type Reload = boolean;
-  bridge.logout(reload: Reload);
-  ```
-
-- example
-  ```typescript
-  bridge.logout(false);
-  ```
-
-### requestToken
-Use the `code` which returned by login authorized to exchange for `access-token`
-
-- types
-  ```typescript
-  type ReqTokenParams = {
-    code?: string;
-    client_id?: string;
-    code_verifier?: string;
-  },  = true
-
-  // whether or not make persistence, default is true
-  bridge.requestToken(params?: ReqTokenParams, persistence?: boolean): Promise<string | null>;
-  ```
-
-- example
-  ```typescript
-  (async function () {
-    await bridge.requestToken();
-    console.info(bridge.token);
+  import Bridge from '@foxone/mixin-sdk-jsbridge';
+  const bridge = new Bridge({
+    client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d'
   });
   ```
 
-### getUserInfo
-Get user information, please make sure the `access_token` is valid
-
-- types
+### debug
+whether to open the debug mode
 
 - example
   ```typescript
-  const userInfo = await bridge.getUserInfo();
-  ```
-
-### getContext
-Get mixin app context contents
-
-- types
-
-- example
-  ```typescript
-  const ctx = bridge.getContext();
-  ```
-
-### reloadTheme
-Reload the theme according to the `<meta>` tag' which specify the `theme-color`
-
-- types
-
-- example
-  ```html
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <!-- ... -->
-      <meta name="theme-color" content="#ff64b1">
-    </head>
-    <body>
-      <!-- ... -->
-  </html>
-  ```
-  ```typescript
-  bridge.reloadTheme();
-  ```
-
-### showToast
-call native message window
-
-*Android Only*
-
-- types
-  ```typescript
-  type Msg = string;
-  bridge.showToast(msg: Msg);
-  ```
-
-- example
-  ```typescript
-  bridge.showToast('your message here!');
-  ```
-
-### playlist
-Play audio(s) by mixin native player
-
-- types
-  ```typescript
-  type List = string[];
-  bridge.playlist(list: List);
-  ```
-
-- example
-  ```typescript
-  bridge.playlist([
-    'https://audio.1.mp3',
-    'https://audio.2.mp3',
-    'https://audio.3s.mp3',
-  ]);
-  ```
-
-### payment
-evoke payment checkout by generate pay *scheme-url*
-
-- types
-  ```typescript
-  type PARAMS_PAYMENT = {
-    recipient: string; // recipient id
-    asset: string; // asset id
-    amount: string;
-    trace?: string; // trace id for unique transfer
-    memo?: string | Record<string, string>;
-  }
-
-  bridge.payment(params?: PARAMS_PAYMENT): string | undefined;
-  ```
-
-- example
-  ```typescript
-  bridge.payment({
-    recipient: 'a753e0eb-1111-2222-3333-a7bda9993f62',
-    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
-    amount: '0.001'
+  import Bridge from '@foxone/mixin-sdk-jsbridge';
+  const bridge = new Bridge({
+    client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d',
+    debug: false
   });
   ```
 
-### transfer
-evoke transfer checkout by generate pay *scheme-url*
-
-- types
-  ```typescript
-  type Recipient = string;
-  bridge.transfer(recipient: Recipient);
-  ```
+### logLevel
+the level for log output
 
 - example
   ```typescript
-  bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
-  ```
-
-### snapshot
-evoke transfer detail checkout by generate snapshots *scheme-url*
-
-- types
-  ```typescript
-  type PARAMS_SNAPSHOTS = {
-    trace_id?: string;
-    snapshot_id?: string;
-  };
-  bridge.snapshot(params: PARAMS_SNAPSHOTS);
-  ```
-
-- example
-  ```typescript
-  bridge.snapshot({ trace_id: 'xxxxxx' });
-  ```
-
-### withdrawal
-evoke withdraw by generate withdrawal *scheme-url*
-
-- types
-  ```typescript
-  type PARAMS_WITHDRAWAL = {
-    address: string; // address id
-    asset: string; // asset id
-    amount: string;
-    trace?: string; // trace id
-    memo?: string | Record<string, string>;
-  };
-  bridge.withdrawal(params: PARAMS_WITHDRAWAL);
-  ```
-
-- example
-  ```typescript
-  bridge.withdrawal({
-    address: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR',
-    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
-    amount: '0.001'
+  import Bridge from '@foxone∂/mixin-sdk-jsbridge';
+  const bridge = new Bridge({
+    client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d',
+    debug: false,
+    logLevel: 'warn'
   });
-  ```
-
-### address
-evoke withdrawal-address action by generate address *scheme-url*
-
-- types
-  ```typescript
-  type PARAMS_ADDRESS_ADD = {
-    asset: string; // asset id
-    label: string; // address label
-    destination: string; // withdrawal address
-    tag?: string; // tag
-  };
-
-  type PARAMS_ADDRESS_DELETE = {
-    asset: string; // asset id
-    address: string; // address id
-  };
-
-  bridge.address(type: 'add', params: PARAMS_ADDRESS_ADD): string | undefined;
-  bridge.address(type: 'del', params: PARAMS_ADDRESS_DELETE): string | undefined;
-  ```
-
-- example
-  ```typescript
-  bridge.address('add', {
-    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
-    label: 'BigONE wallet',
-    destination: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR'
-  });
-  ```
-
-### share
-evoke share action by generate share *scheme-url*
-
-- types
-  ```typescript
-  type PARAMS_SHARE_CARD = {
-    action: string; // the share card url
-    app_id: string; // the app id
-    icon_url: string; // the share card image url
-    title?: string; // the share card title
-    description?: string; // the share card description
-  };
-
-  type PARAMS_SHARE_LIVE = {
-    url: string; // the live stream url
-    thumb_url?: string; // the thumb image url
-    height?: number; // the live player height
-    width?: number; // the live player weight
-  };
-
-  type CATEGORY_SHARE = 'text' | 'image' | 'contact' | 'app_card' | 'live' | 'post';
-
-  bridge.share(type: 'text', txt: string): string | undefined;
-  bridge.share(type: 'image', url: string): string | undefined;
-  bridge.share(type: 'contact', user_id: string): string | undefined;
-  bridge.share(type: 'post', content: string): string | undefined;
-  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | undefined;
-  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | undefined;
-  ```
-
-- example
-  ```typescript
-  bridge.share('app_card', {
-    action: 'https://your.share.com',
-    app_id: 'your app id',
-    icon_url: 'https://your.share.com/icon',
-    title: 'Lyric Profile',
-    description: 'From xxx'
-  });
-  ```
-
-### popup
-evoke user or bot's popup by generate *scheme-url*
-
-- types
-  ```typescript
-  type PARAMS_POPUP_BOT = {
-    app_id: string; // the bot url
-    action?: 'open'; // always open the bot pop-up window
-    [props: string]: any; // parameters of any name or type can be passed when opening the bot homepage to facilitate the development of features like invitation codes
-  }
-
-  bridge.popup(type: 'user', user_id: string): string | undefined;
-  bridge.popup(type: 'bot', params: PARAMS_POPUP_BOT): string | undefined;
-  ```
-
-- example
-  ```typescript
-  bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
-  ```
-
-### conversation
-evoke conversation checkout by generate conversations *scheme-url*
-
-- types
-  ```typescript
-  type conversationId = string;
-  bridge.conversation(conversation_id: conversationId);
-  ```
-
-- example
-  ```typescript
-  bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e');
   ```
