--- a/packages/sdk/docs/2.zh-CN.md
+++ b/packages/sdk/docs/2.zh-CN.md
@@ -1,412 +1,40 @@
-# 接口文档
+# Options
 
-| 名称 | 功能说明 | 类型 | 默认 | 版本 |
-| --- | --- | --- | --- | --- |
-| version | jsbridge-sdk 的版本号 | `string` | `unknown` |  |
-| conversationId | conversation id | `string` | `undefined` |  |
-| code | code 通常用于获取 access-token | `string` | `undefined` |  |
-| codeVerifier | code-verifier 通常用于获取 access-token | `string` | `undefined` |  |
-| token | 获取 access-token | `string` | `undefined` |  |
-| isMixin | 判断是否在 mixin 或者 reborn App 内 | `boolean` | - |  |
-| login | 跳转到 OAuth认证页 去登陆 | `function(auth: AUTH, params?: LoginParams)` | - |  |
-| logout | 登出 | `function(reload = true)` | - |  |
-| requestToken | 用code换取token | `function(params?: ReqTokenParams, persistence = true)` | - |  |
-| getUserInfo | 获取用户信息 | `function(token?: string)` | - |  |
-| getContext | 在 mixin app 内获取上下文对象 | `function()` | - |  |
-| reloadTheme | 重载 mixin 的主体色 | `function()` | - |  |
-| showToast | 调用原生的消息弹窗 | `function(msg: string)` | - | `Android Only` |
-| playlist | 用原生播放器播放音频 | `function(src: string[])` | - | `0.30.0` |
-| payment | 通过生成 scheme-url 来唤起支付面板 | `function(params: PARAMS_PAYMENT): { url?: string, params: PARAMS_PAYMENT } \| undefined` | - |  |
-| transfer | 通过生成 scheme-url 来唤起转账面板 | `function(recipient: string): string \| undefined` | - |  |
-| snapshot | 通过生成 scheme-url 来唤起转账详情 | `function(params: PARAMS_SNAPSHOTS): string \| undefined` | - |  |
-| withdrawal | 通过生成 scheme-url 来唤起取回资产面板 | `function(params: PARAMS_WITHDRAWAL): { url?: string, params: PARAMS_WITHDRAWAL } \| undefined` | - |  |
-| address | 通过生成 scheme-url 来唤起取回资产地址的操作 | `function(category: 'add' \| 'del', params: PARAMS_ADDRESS_ADD \| PARAMS_ADDRESS_DELETE): string \| undefined` | - |  |
-| share | 通过生成 scheme-url 来唤起App内分享 | `function(category: CATEGORY_SHARE, params: string \| PARAMS_SHARE_CARD \| PARAMS_SHARE_LIVE): string \| undefined` | - |  |
-| popup | 通过生成 scheme-url 来唤起用户/机器人的主页 | `function(type: 'user' \| 'bot', params: string \| PARAMS_POPUP_BOT): string \| undefined` | - |  |
-| conversation | 通过生成 scheme-url 来唤起对话 | `function(conversation_id: string): string \| undefined` | - | `0.31.1` |
+| 名称 | 功能说明 | 类型 | 默认 |
+| --- | --- | --- | --- |
+| client_id | mixin机器人id | `string` |  |
+| debug | debug模式 | `boolean` | `true` |
+| logLevel | 日志等级 | `'detail' \| 'info' \| 'warn' \| 'error' \| 'silent'` | `detail` |
 
-### version
-jsbridge-sdk 的版本号
+### client_id
+mixin机器人id (APP ID)
 
 - 使用示例
   ```typescript
-  console.info(bridge.version); // 0.1.3
-  ```
-
-### code
-code 通常用于获取 access-token
-
-- 使用示例
-  ```typescript
-  console.info(bridge.code); // 550a98ce9095e3ca65ff0e3d9871a4b3dfda338e65c04e8afc4aeb71254d67e5
-  ```
-
-### codeVerifier
-code-verifier 通常用于获取 `access-token`
-
-- 使用示例
-  ```typescript
-  console.info(bridge.codeVerifier); // OWVicDNpenVKVzRlNmFBUUhUOUlHakJzODhQeVZHNFE
-  ```
-
-### token
-获取 `access-token`，当然一开始得先调用 `requestToken` 来换取 token
-
-- 使用示例
-  ```typescript
-  console.info(bridge.token); // eyJhbGciOiJSUzUxMiIsInR5cCI6IkpXVCJ9.eyJhaWQiOiJiYTgwZDE3……
-  ```
-
-### conversationId
-conversation id 实际上是通过 getContext 获取的
-
-- 使用示例
-  ```typescript
-  console.info(bridge.conversationId); // 51e0e886-fba7-3732-804f-2686e5bb459e
-  ```
-
-### isMixin
-判断是否在 mixin 或者 reborn App 内
-
-- 使用示例
-  ```typescript
-  console.info(bridge.isMixin); // true
-  ```
-
-### login
-跳转到 OAuth 页面，让并让用户授权登陆，而后重定向回到指定 `redirect_url` 的页面中
-
-- 参数类型
-  ```typescript
-  type AUTH = {
-    phone?: boolean; // 获取用户手机号
-    profile?: boolean; // 获取用户详细信息
-    contacts?: boolean; // 获取用户通讯录
-    assets?: boolean; // 获取用户资产情况
-    snapshots?: boolean; // 获取用户转账记录
-    messages?: boolean; // 允许机器人代发消息
-  };
-
-  type LoginParams = {
-    oauth_url?: string; // oauth的 protocol + host，默认为 `https://mixin-oauth.firesbox.com`
-    client_id?: string; // client id，可在 mixin 开发者平台中获取
-    redirect_url?: string; // 重定向 url
-    state?: string; // oauth state
-    code_challenge?: boolean; // 是否需要 code_challenge，默认 true
-  };
-
-  bridge.login(auth: Auth, params?: LoginParams): void;
-  ```
-
-- 使用示例
-  ```typescript
-  const auth = {
-    phone: true,
-    profile: true,
-    contacts: false,
-    assets: true,
-    snapshots: false,
-    messages: false
-  }
-
-  bridge.login(auth, { redirect_url: 'https://localhost:3000' });
-  ```
-
-### logout
-登出
-
-- 参数类型
-  ```typescript
-  type Reload = boolean;
-  bridge.logout(reload: Reload);
-  ```
-
-- 使用示例
-  ```typescript
-  const isReload = false;
-  bridge.logout(isReload);
-  ```
-
-### requestToken
-用授权登陆返回的 `code`，换取 `access-token`
-
-- 参数类型
-  ```typescript
-  type ReqTokenParams = {
-    code?: string;
-    client_id?: string;
-    code_verifier?: string;
-  };
-
-  // persistence 是否做持久化，默认 true
-  bridge.requestToken(params?: ReqTokenParams, persistence?: boolean): Promise<string | null>;
-  ```
-
-- 使用示例
-  ```typescript
-  (async function () {
-    await bridge.requestToken();
-    console.info(bridge.token);
+  import Bridge from '@foxone/mixin-sdk-jsbridge';
+  const bridge = new Bridge({
+    client_id: '86cf39ad-4e63-46c6-a6db-90cea8d05c1d'
   });
   ```
 
-### getUserInfo
-获取用户信息，请确保 `access_token` 有效
-
-- 参数类型
+### debug
+是否开启debug模式
 
 - 使用示例
   ```typescript
-  const userInfo = await bridge.getUserInfo();
-  ```
-
-### getContext
-在 Mixin App 中，获取当前上下文内容
-
-- 参数类型
-
-- 使用示例
-  ```typescript
-  const ctx = bridge.getContext();
-  ```
-
-### reloadTheme
-根据定义的  `<meta>` 标签中的 `theme-color` 来重载 mixin app 的主体色
-
-- 参数类型
-
-- 使用示例
-  ```html
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <!-- ... -->
-      <meta name="theme-color" content="#ff64b1">
-    </head>
-    <body>
-      <!-- ... -->
-  </html>
-  ```
-
-  ```typescript
-  bridge.reloadTheme();
-  ```
-
-### showToast
-调用原生的消息弹窗
-
-*Android Only*
-
-- 参数类型
-  ```typescript
-  type Msg = string;
-  bridge.showToast(msg: Msg);
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.showToast('your message here!');
-  ```
-
-### playlist
-用原生播放器播放音频
-
-- 参数类型
-  ```typescript
-  type List = string[];
-  bridge.playlist(list: List);
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.playlist([
-    'https://audio.1.mp3',
-    'https://audio.2.mp3',
-    'https://audio.3s.mp3',
-  ]);
-  ```
-
-### payment
-通过生成 *scheme-url* 来唤起支付面板
-
-- 参数类型
-  ```typescript
-  type PARAMS_PAYMENT = {
-    recipient: string; // recipient id
-    asset: string; // asset id
-    amount: string;
-    trace?: string; // trace id 确保生成唯一的转账
-    memo?: string | Record<string, string>;
-  }
-
-  bridge.payment(params?: PARAMS_PAYMENT): string | undefined;
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.payment({
-    recipient: 'a753e0eb-1111-2222-3333-a7bda9993f62',
-    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
-    amount: '0.001'
+  import Bridge from '@foxone/mixin-sdk-jsbridge';
+  const bridge = new Bridge({
+    debug: false
   });
   ```
 
-### transfer
-通过生成 *scheme-url* 来唤起转账面板
-
-- 参数类型
-  ```typescript
-  type Recipient = string;
-  bridge.transfer(recipient: Recipient);
-  ```
+### logLevel
+日志的输出等级
 
 - 使用示例
   ```typescript
-  bridge.transfer('a753e0eb-1111-2222-3333-a7bda9993f62');
-  ```
-
-### snapshot
-通过生成 *scheme-url* 来唤起转账详情
-
-- 参数类型
-  ```typescript
-  type PARAMS_SNAPSHOTS = {
-    trace_id?: string;
-    snapshot_id?: string;
-  };
-  bridge.snapshot(params: PARAMS_SNAPSHOTS);
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.snapshot({ trace_id: 'xxxxxx' });
-  ```
-
-### withdrawal
-通过生成 *scheme-url* 来唤起取回资产面板
-
-- 参数类型
-  ```typescript
-  type PARAMS_WITHDRAWAL = {
-    address: string; // address id
-    asset: string; // asset id
-    amount: string;
-    trace?: string; // trace id
-    memo?: string | Record<string, string>;
-  };
-  bridge.withdrawal(params: PARAMS_WITHDRAWAL);
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.withdrawal({
-    address: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR',
-    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
-    amount: '0.001'
+  import Bridge from '@foxone∂/mixin-sdk-jsbridge';
+  const bridge = new Bridge({
+    logLevel: 'warn'
   });
-  ```
-
-### address
-通过生成 *scheme-url* 来唤起取回资产地址的操作
-
-- 参数类型
-  ```typescript
-  type PARAMS_ADDRESS_ADD = {
-    asset: string; // asset id
-    label: string; // 取回资产地址的标签
-    destination: string; // 取回资产的地址
-    tag?: string; // 标记
-  };
-
-  type PARAMS_ADDRESS_DELETE = {
-    asset: string; // asset id
-    address: string; // address id
-  };
-
-  bridge.address(type: 'add', params: PARAMS_ADDRESS_ADD): string | undefined;
-  bridge.address(type: 'del', params: PARAMS_ADDRESS_DELETE): string | undefined;
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.address('add', {
-    asset: 'c6d0c728-2624-429b-8e0d-d9d19b6592fa',
-    label: 'BigONE wallet',
-    destination: '1CkFRshv9zX5B4W4wf9kz6MkxFs8AcD2sR'
-  });
-  ```
-
-### share
-通过生成 *scheme-url* 来唤起App内分享
-
-- 参数类型
-  ```typescript
-  type PARAMS_SHARE_CARD = {
-    action: string; // 分享卡片的地址
-    app_id: string; // app id
-    icon_url: string; // 分享卡片的图标地址
-    title?: string; // 分享卡片的标题
-    description?: string; // 分享卡片的描述
-  };
-
-  type PARAMS_SHARE_LIVE = {
-    url: string; // 直播的地址
-    thumb_url?: string; // 直播的图标地址
-    height?: number; // 直播播放器的高度
-    width?: number; // 直播播放器的宽度
-  };
-
-  type CATEGORY_SHARE = 'text' | 'image' | 'contact' | 'app_card' | 'live' | 'post';
-
-  bridge.share(type: 'text', txt: string): string | undefined;
-  bridge.share(type: 'image', url: string): string | undefined;
-  bridge.share(type: 'contact', user_id: string): string | undefined;
-  bridge.share(type: 'post', content: string): string | undefined;
-  bridge.share(type: 'app_card', params: PARAMS_SHARE_CARD): string | undefined;
-  bridge.share(type: 'live', params: PARAMS_SHARE_LIVE): string | undefined;
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.share('app_card', {
-    action: 'https://your.share.com',
-    app_id: 'your app id',
-    icon_url: 'https://your.share.com/icon',
-    title: 'Lyric的个人主页',
-    description: '来自定投人生课堂'
-  });
-  ```
-
-### popup
-通过生成 *scheme-url* 来唤起用户/机器人的主页
-
-- 参数类型
-  ```typescript
-  type PARAMS_POPUP_BOT = {
-    app_id: string; // 机器人的地址
-    action?: 'open'; // 总是会打开机器人弹窗，无论当前是否已经存在弹窗
-    [props: string]: any; // 在打开机器人主页时，可以传递的参数，以便于开发邀请代码等功能
-  }
-
-  bridge.popup(type: 'user', user_id: string): string | undefined;
-  bridge.popup(type: 'bot', params: PARAMS_POPUP_BOT): string | undefined;
-  ```
-
-- 使用示例
-  ```typescript
-  bridge.popup('user', 'a753e0eb-1111-2222-3333-a7bda9993f62');
-  ```
-
-### conversation
-通过生成 *scheme-url* 来唤起对话
-
-- types
-  ```typescript
-  type conversationId = string;
-  bridge.conversation(conversation_id: conversationId);
-  ```
-
-- example
-  ```typescript
-  bridge.conversation('51e0e886-fba7-3732-804f-2686e5bb459e');
   ```
