[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.4.1

--- a/packages/sdk/docs/3.md
+++ b/packages/sdk/docs/3.md
@@ -9,7 +9,7 @@
 | conversationId | the conversation id | `string` | `undefined` |  |
 | isMixin | judgement whether or not in mixin or reborn app | `boolean` | - |  |
 | token | get mixin access-token | `string` | `undefined` |  |
-| version | the jsbridge-sdk version | `string` | `unknown` |  |
+| version | the app version | `string` | `unknown` |  |
 
 ### code
 the code which used to get access-token
@@ -52,11 +52,11 @@ To get an `access-token`, obviously, you should have to call `requestToken` firs
   ```
 
 ### version
-the jsbridge-sdk version
+the app version
 
 - example
   ```typescript
-  console.info(bridge.version); // 0.1.3
+  console.info(bridge.version); // 0.30.0
   ```
 
 ## Methods
