--- a/packages/sdk/docs/3.zh-CN.md
+++ b/packages/sdk/docs/3.zh-CN.md
@@ -9,7 +9,7 @@
 | conversationId | 获取 conversation id | `string` | `undefined` |  |
 | isMixin | 判断是否在 mixin 或者 reborn App 内 | `boolean` | - |  |
 | token | 获取 access-token | `string` | `undefined` |  |
-| version | jsbridge-sdk 的版本号 | `string` | `unknown` |  |
+| version | App的版本号 | `string` | `unknown` |  |
 
 ### code
 code 通常用于获取 access-token
@@ -52,11 +52,11 @@ conversation id 实际上是通过 getContext 获取的
   ```
 
 ### version
-jsbridge-sdk 的版本号
+App的版本号
 
 - 使用示例
   ```typescript
-  console.info(bridge.version); // 0.1.3
+  console.info(bridge.version); // 0.30.0
   ```
 
 ## 方法
